# Rift

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  install_wsl.ps1  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 20260315_0001_persistence_foundation.py  20260320_0002_run_lifecycle_management.py  20260320_0003_add_llm_enrichment_fields.py
app/: logging.py  main.py  middleware.py
app/api/: __init__.py
app/api/v1/: reports.py  (+2 more)
app/core/: __init__.py  config.py  diff_engine.py  openapi_processing.py  severity_engine.py
app/db/: __init__.py  base.py  models.py  session.py
app/observability/: __init__.py  metrics.py  tracing.py
app/services/: changelog_interpreter.py  run_orchestration.py
docker/: entrypoint.sh
docs/: architecture.md
docs/adr/: ADR-0001-mvp-scope.md
docs/deployment/: checklist.md  docker.md
examples/: sample-report.md  v1.yaml  v2.yaml
scripts/: process_run.py  smoke.sh
tests/: __init__.py  conftest.py  fixtures_diff_engine.py  test_diff_engine.py  test_diff_engine_additional.py  test_e2e_smoke.py  test_health.py  test_ingestion_api.py  test_migrations.py  test_openapi_processing.py  test_openapi_processing_additional.py  test_report_api.py  test_report_api_integration.py  test_run_orchestration.py  test_settings.py  test_severity_engine.py  test_severity_engine_additional.py
tests/fixtures/: __init__.py  integration_db.py  invalid_specs.py  postgres.py  sample_specs.py
(+2 files in other folders)
